# binary_parsing

./: .gitignore  .gitmodules  README.md
bfd-rust/: Cargo.toml  build.rs
bfd-rust/src/: lib.rs
binutils/: build-binutils.sh
binutils/bfd-wrapper/: CMakeLists.txt  README.md  bfd_wrapper.c  bfd_wrapper.h  test.c
bitmap/: bmp.c  bmp.h
elf/: Cargo.toml
elf/src/: README.md  main.rs
elf/src/file_read/: mod.rs
elf/src/parse/: mod.rs  utils.rs
elf/test/: AudioPlayer  forwarding
from-bytes-macro/: Cargo.toml
from-bytes-macro/src/: lib.rs
from-bytes-macro/test/: README.md
from-bytes-test/: Cargo.toml
from-bytes-test/src/: main.rs  test.rs
